# task_scheduler

./: CMakeLists.txt  README.md  cmake_install.cmake  main
header/: .idSorted.hpp.swp  assignee.hpp  date.h  dueDateSorted.hpp  idSorted.hpp  prioritySorted.hpp  reminder.hpp  task.h  taskSorterStrategy.hpp  time.h  toDoList.h
images/: temp.txt
src/: assignee.cpp  date.cpp  main.cpp  mymain.cpp  reminder.cpp  task.cpp  time.cpp  toDoList.cpp  toDoList.hpp
testing/: assignee_test.cpp  date_test.cpp  manualTesting.cpp  reminder_test.cpp  task_test.cpp  time_test.cpp  todolist_test.cpp  unit_test.cpp
